--- a/_posts/2019-04-27-why.md
+++ b/_posts/2019-04-27-why.md
@@ -1,26 +1,47 @@
 ---
-title: Why Flowith with Knowledge Garden
+title: 01. 为什么要使用Flowith 
 author: MindReset
-date: 2025-09-03
-category: Jekyll
+date: 2015-09-03
+category: [更新]
 layout: post
+cover: https://elephant218.github.io/MindSet_flowith/assets/2.jpg
 ---
 
-**1. 为什么要使用Flowith?** 
 
-​		只要大家是一个知识工作者，大家肯定遇到过如下问题：
 
-​		笔记，论文，书籍等等资料实在太多，有的纸质版，有的电子版，有的还是在app或是网页上浏览获取的内容。当你想下笔的时候，好像有很多想法但总是有点理不清，好像在哪里看过却又总是找不到。当你某天下定决心，早上六点半起床，下定决心，吭哧吭哧，从头开始，翻遍了你的纸质书，翻遍了你的文件夹，每一份每一份地读下来，哇塞，终于找到了你之前想找的某篇文章的某个段落，开始跟AI工具进行单线程协同工作的时候！！！————
 
-​		好的，收拾收拾准备洗洗睡了（不好意思，开个玩笑，但这写个论文要写到什么时候！）
+
+Why Use Flowith?
+-------------
+
+
+对于任何一个知识工作者，你肯定遇到过如下问题：
+
+笔记，论文，书籍等等资料实在太多，有的纸质版，有的电子版，有的还是在app或是网页上浏览获取的内容。当你想创作下笔的时候，好像有很多想法但总是有点理不清，好像在哪里看到过却又总是找不到。
+
+当你某天下定决心，早上六点半起床，吭哧吭哧，从头开始，翻遍了你手边所有的纸质书，翻遍了你电脑上所有的文件夹，每一份每一份地读下来，哇塞，终于找到了你之前想找的某篇文章某个段落，准备酣畅淋漓地开始跟AI工具进行深入地学术灵魂交流的时候！！！————
+
+好的，夜深了，请收拾收拾洗洗睡吧（不好意思，开个玩笑，但这个论文到底要写到什么时候！）
 
 ---
 
-​		现如今大家都知道要用AI工具来提升我们的工作效率，选择如云，为什么要用Flowith平台呢？
+现如今大家都知道要用AI工具来提升我们的工作效率，选择如云，那为什么要用Flowith平台呢？
 
-​		相较于传统的聊天式AI工具，Flowith是在一个二维画布上进行交互的，这样我们就可以同时开启跟多个AI模型的对话，而不是只跟某一个AI聊天工具等着它输出结果，大大提升我们的创作效率。
+相较于传统的单线程式的AI聊天工具，Flowith是在一个二维画布上进行交互的AI工具平台。在这个平台上我们可以同时开启跟多个AI模型的对话，而不是只跟某一个AI聊天工具等着它输出结果，这能够大大提升我们的创作效率。
 
-​		在Flowith平台上，集成了现有的很先进的LLM模型——
+> 援引自官网[flowith.io][1]：
+>
+> Flowith is the next-generation AI creation tool. Unlike traditional chat-based AI tools, Flowith's interaction is based on a two-dimensional canvas that allows you to simultaneously interact with multiple AI models within a single workspace, enabling content generation that significantly boosts efficiency and facilitates entering a flow state during the creative process.
+
+
+
+
+
+Flowith上集成的LLM模型
+-------------
+
+
+在Flowith平台上，集成的现有的先进LLM模型——
 
 - GPT系列 (GPT4.1/GPT4.1 mini/GPT 5 nano/GPT mini)
 - DeepSeek系列 (DeepSeek V3.1/DeepSeek R1)
@@ -28,23 +49,25 @@ layout: post
 - OpenAI系列 (o3 / o3 pro/ o3 mini)
 - Claude系列(Sonnet 3.7/4   /Opus 4/4.1)
 - GLM4.5, Gemini 2.5 (Flash/Pro), Grok(3 mini/4)   
-
-> 援引自官网[flowith.io][1]的回答：
->
-> Flowith is the next-generation AI creation tool. Unlike traditional chat-based AI tools, Flowith's interaction is based on a two-dimensional canvas that allows you to simultaneously interact with multiple AI models within a single workspace, enabling content generation that significantly boosts efficiency and facilitates entering a flow state during the creative process.
-
-​		
+- 平台持续更新中
 
 
 
-**2. 为什么说Flowith的知识库/知识花园是我们的科研利器？**
 
-​		我们首先要搞清楚一个问题，就是虽然现在很多的LLM模型虽然功能已经很强大，但是要想让它们去解决你的专业领域的小众问题还是有点"无能为力"的，因为它们是通用模型，本身训练他们的语料库是很庞杂的，大概率上是无法涵盖各种小众领域细分行业的专业资料和知识的。所以将你的专业问题直接抛给这些大模型回答，或是你希望借助这些大模型来辅助你生产出尽可能专业的论文资料的时候，它们做不到，只能给个"泛泛的" 解决方案。
 
-​		所以我们一定需要Flowith平台上**知识库/知识花园**的辅助！
+为什么说Flowith知识库是我们的科研利器？
+-------------
+
+我们首先要搞清楚一个问题，就是现在很多的LLM模型虽然功能已经很强大，但是要想让它们去解决你的专业领域的小众问题还是有点"无能为力"的，因为它们是通用模型，本身训练他们的语料库是很庞杂的，大概率上是无法涵盖各种小众领域细分行业的专业资料和知识的。所以将你的专业问题直接抛给这些大模型回答，或是你希望借助这些大模型来辅助你生产出尽可能专业的论文资料的时候，它们做不到，很有可能只可以给出个"泛泛的" 解决方案。
+
+这时候Flowith平台上的 **知识库/知识花园** 功能就能够解决这种"专业性不足"的问题啦！！！
 
 > Flowith's **Knowledge Garden** is designed to let you interact with AI using your own knowledge. It automatically organizes, manages, and helps you create with your information. The system breaks down your files, notes, and online resources into small pieces of information called Seeds. Using AI, Flowith connects these Seeds to create a dynamic web of knowledge. When you chat with the AI, it automatically uses the relevant information from your Knowledge Garden, making its responses more accurate and tailored to your needs.
 
-​		Flowith平台上有很多个**知识库**构成了其**知识花园**。通过把专业的资料库补充进去知识库，让AI去自动理解提炼里面的精华生成相应的知识单元，自动转化为小块信息，也就是**种子**"Seed"。同时它也学习了这些顶尖素材的文风和写作逻辑，这些专业素材本身能够迁移LLM模型的语言风格，从而让AI的回答能够更符合你所需要的那些专业领域的逻辑深度和行文风格。当你在Flowith平台进行提问的时候，它会自动从你选择的知识库中使用相关的信息，也就是连接相关的种子给你构造出动态的知识网页，帮你梳理清楚脉络，给出适应你需要的专业回答，而不是通用式AI给出的那种"泛泛的"回答（这不就相当于一个专家教授在旁边亲手给你1V1指导嘛！！！）。
+Flowith平台上有很多个**知识库**构成其**知识花园**。通过把专业的资料库补充进去知识库，让AI去自动理解提炼里面的精华生成相应的知识单元，自动转化为小块信息，也就是**种子**"Seed"。同时它也学习了这些顶尖素材的文风和写作逻辑，这些专业素材本身能够迁移LLM模型的语言风格，从而让AI的回答能够更符合你所需要的那些专业领域的逻辑深度和行文风格。当你在Flowith平台进行提问的时候，它会自动从你选择的知识库中使用相关的信息，也就是连接相关的种子给你构造出动态的知识网页，帮你梳理清楚脉络，给出适应你需要的专业回答，而不是通用式AI模型给出的那种千篇一律的回答。
+
+这不就相当于一个专家教授在旁边亲手给你1V1指导嘛！！！
+
+
 
 [1]:https://doc.flowith.io/
