--- a/_posts/2019-04-29-license.md
+++ b/_posts/2019-04-29-license.md
@@ -92,7 +92,7 @@ cover: https://elephant218.github.io/MindSet_flowith/assets/2.jpg
 
 #### 思维树 ToT
 
-<img src="assets/imageurl=%2F_next%2Fstatic%2Fmedia%2FTOT.3b13bc5e.png" alt="TOT" style="zoom:50%;" />
+<img src="assets/5.png" alt="TOT" style="zoom:50%;" />
 
 思维树由连贯的语言序列构成。中间序列即为解决问题的中间步骤。通过结合搜索算法(如广度优先搜索和深度优先搜索)来生成和评估输出。系统性探索的时候还可向前验证和回溯。
 
